sf/GardenForce/force-app/main/default/objects/Plant__c/Plant__c.object-meta.xml
<CustomObject>
    <label>Plant</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Plant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>