sf/GardenForce/force-app/main/default/objects/Plant__c/fields/current__c.field-meta.xml
<CustomField>
    <fullName>current__c</fullName>
    <description>Valor actual de humedad</description>
    <label>current</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>