sf/GardenForce/force-app/main/default/objects/Plant__c/fields/moist__c.field-meta.xml
<CustomField>
    <fullName>moist__c</fullName>
    <label>moist</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>