sf/GardenForce/force-app/main/default/objects/Plant__c/fields/PlantId__c.field-meta.xml
<CustomField>
    <fullName>PlantId__c</fullName>
    <externalId>true</externalId>
    <label>Plant Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>